Added Plausible analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,9 @@
       <meta name="pv-cache-path" content="{{ site.google_analytics.pv.cache_path | relative_url }}">
     {% endif %}
 
+    <!-- Plausible analytics. This does not collect personally identifiable data.-->
+    <script defer="" data-domain="blog.schichler.dev" src="https://a.schichler.dev/js/script.js"></script>
+
   {% endif %}
 
   {% seo title=false %}
