--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  {% if page.redirect_to %}
+    <meta http-equiv="refresh" content="0;url={{ page.source_url }}" />
+  {% endif %}
+
   {% if page.layout == 'home' or page.layout == 'post' %}
 
     <!-- i18n for `_javascript/utils/timeago.js` -->
