Adjusted redirect URLs to include a trailing `/`

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -3,4 +3,4 @@ layout: page
 ---
 
 This content has moved.
-You should be redirected to <a href="{{ page.redirect_to }}">{{ page.redirect_to }}</a> momentarily.
+You should be redirected to <a href="{{ page.redirect_to }}/">{{ page.redirect_to }}/</a> momentarily.
