--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   {% if page.redirect_to %}
-    <meta http-equiv="refresh" content="0;url={{ page.redirect_to }}" />
+    <meta http-equiv="refresh" content="0;url={{ page.redirect_to }}/" />
   {% endif %}
 
   {% if page.layout == 'home' or page.layout == 'post' %}
