--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,11 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 
 /* append your custom style below */
 
+:root {
+  /* I use these in code blocks. */
+  tab-size: 4;
+}
+
 .tooltip, .license-wrapper {
   /* This can have multiple lines now. */
   white-space: pre-line;
