--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,6 +78,17 @@ layout: page
           {% endfor %}
           </span>
         {% endif %}
+
+        <!-- tags -->
+        {% if post.tags.size > 0 %}
+          <i class="fa fa-tags fa-fw"></i>
+          <span>
+          {% for tag in post.tags %}
+            {{ tag }}
+            {%- unless forloop.last -%},{%- endunless -%}
+          {% endfor %}
+          </span>
+        {% endif %}
       </div>
 
       {% if post.pin %}
