--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -2,7 +2,7 @@
   mermaid-js loader
 -->
 
-<script src="https://cdn.jsdelivr.net/npm/mermaid@8/dist/mermaid.min.js"></script>
+<script src="{{ '/assets/un-cdn/jsdelivr/npm/mermaid@8/dist/mermaid.min.js' | relative_url }}"></script>
 
 <script>
   $(function() {
