--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1,7 +1,7 @@
 /*
   The common styles
 */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro:wght@400;600;900&display=swap');
+@import url('/assets/un-cdn/Google\ Fonts/css2.css');
 
 @mixin mode-toggle($dark-mode: false) {
   @if $dark-mode {
