--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,8 @@
         <span data-toggle="tooltip" data-placement="top"
           title="{{ site.data.locales[lang].copyright.verbose }}">{{ site.data.locales[lang].copyright.brief }}</span>
         {% endif %}
+        <br>
+        <a href="https://impressum.schichler.dev/">Impressum/Imprint, Datenschutz</a>
       </p>
     </div>
 
