Contact info layout adjustment

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -89,6 +89,10 @@
     </a>
     {% endif %}
 
+    {% if entry.type == 'br' %}
+    <br>
+    {% endif %}
+
     {% endfor %}
 
   </div> <!-- .sidebar-bottom -->
