--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,3 +43,14 @@ html[mode=dark] {
 #sidebar .sidebar-highlight a {
   color: var(--sidebar-highlight-color);
 }
+
+@media all and (min-width: 1650px) {
+  #sidebar .sidebar-bottom {
+    padding-right: 3.5rem;
+
+    &.justify-content-center {
+      -webkit-box-pack: center !important;
+      justify-content: center !important;
+    }
+  }
+}
